# aihero

./: 01_ingest_index_data.ipynb  Day 1_ Ingest and Index Your Data.docx
project/: 01_ingest_index_data.ipynb  03_search.ipynb  04_agents.ipynb  pyproject.toml
project/.ipynb_checkpoints/: 01_ingest_index_data-checkpoint.ipynb
