[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.47.0",
    "google-generativeai>=0.8.5",
    "minsearch>=0.0.7",
    "pydantic-ai>=1.9.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
